# geoda

./: .gitignore  .gitmodules  GdaConst.cpp  GdaShape.cpp  GdaShape.h  GenUtils.cpp  GenUtils.h  GeneralWxUtils.cpp  GeneralWxUtils.h  GeoDa.cpp  GeoDa.h  GeoDaSet.h  GeoDamake.centos.opt  GeoDamake.centos6.opt  GeoDamake.macosx.10.8.opt  GeoDamake.macosx.opt  GeoDamake.opt  GeoDamake.ubuntu.opt  GeoDamake.ubuntu32.opt  Project.cpp  Project.h  SpatialIndAlgs.cpp  SpatialIndAlgs.h  TemplateCanvas.cpp  TemplateCanvas.h  TemplateFrame.cpp  TemplateLegend.cpp  VarTools.h  index.html  params.json  version.h  wxTranslationHelper.cpp
Algorithms/: DataClassify.cpp  DataClassify.h  azp.cpp  azp.h  cluster.cpp  cluster.h  localjc_kernel.cl  redcap.cpp  redcap.h
DataViewer/: CustomClassifPtree.cpp  DataSource.cpp  OGRColumn.cpp  OGRTable.cpp  OGRTable.h  TableInterface.h
DialogTools/: AbstractClusterDlg.cpp  AutoUpdateDlg.cpp  CatchmentDlg.cpp  CatchmentDlg.h  ConnectDatasourceDlg.cpp  CreatingWeightDlg.cpp  CreatingWeightDlg.h  CsvFieldConfDlg.cpp  ExportDataDlg.cpp  LocaleSetupDlg.cpp  RandomizationDlg.cpp  RedcapDlg.cpp  RegressionDlg.cpp  RoadDistancesDlg.cpp  RoadDistancesDlg.h  SkaterDlg.cpp  SnapPointsToRoadDlg.cpp  SnapPointsToRoadDlg.h  SpatialJoinDlg.cpp  SpatialJoinDlg.h  TravelMapDlg.cpp  TravelMapDlg.h  VarGroupingEditorDlg.cpp  WeightsManDlg.cpp  nbrMatchDlg.cpp
Explore/: AbstractCoordinator.cpp  AbstractCoordinator.h  Basemap.cpp  Basemap.h  CatClassification.cpp  CatClassification.h  ConditionalMapView.cpp  (+14 more)
Weights/tests/: CMakeLists.txt  test_points_conti.cpp
(+95 files in other folders)
